# frosted_tracks

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  conftest.py  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: documentation.yml
data/: 170_degree_turns.traj  40_degree_turns.traj  box_trajectories.traj  circular_trajectories.traj  mappy_trajectories.traj  spirograph_trajectories.traj  straight_trajectories.traj  winding_10_to_20.traj  winding_20_to_50.traj  winding_50_to_100.traj  winding_5_to_10.traj
data/trajectories/flatfiles/synthetic/: circle_trajs.pkl  circle_trajs.traj  square_trajs.traj  straight_trajs.pkl  triangle_trajs.pkl  triangle_trajs.traj  zigzag_100_trajs.traj  zigzag_10_trajs.traj  zigzag_110_trajs.traj  zigzag_120_trajs.traj  zigzag_130_trajs.traj  zigzag_140_trajs.traj  zigzag_150_trajs.traj  zigzag_160_trajs.traj  zigzag_170_trajs.traj  zigzag_20_trajs.traj  zigzag_30_trajs.traj  zigzag_40_trajs.traj  zigzag_50_trajs.traj  zigzag_60_trajs.traj  zigzag_70_trajs.traj  zigzag_80_trajs.traj  zigzag_90_trajs.traj
doc/: requirements.txt
doc/source/: changelog.rst  conf.py  index.rst  installation.rst  user_guide.rst
src/frosted_tracks/: __init__.py  feature_functions.py  front_end.py  frosted_tracks_types.py  matrix_utilities.py  pytest.ini  timing.py
src/frosted_tracks/segmentation/: __init__.py  drivers.py  fast_cluster_predictor.py
src/frosted_tracks/test/: README.md  __init__.py  generate_test_ground_truth.py  golden_test_inputs.py
src/frosted_tracks/test/fixtures/: __init__.py  common.py  features.py  pytest_wrappers.py  trajectories.py
src/frosted_tracks/test/infrastructure/: __init__.py  find_generators.py  ground_truth.py  package_enumeration.py
src/frosted_tracks/test/math_tests/: __init__.py  test_geocentric_geodetic_conversion.py
src/frosted_tracks/trajectory/: __init__.py  heading_and_speed.py
src/frosted_tracks/trajectory/resample/: __init__.py  hermite.py  linear.py  pchip.py
src/unused/: fast_cluster_predictor.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  common.py  features.py  ticc.py  trajectories.py
tests/math/: test_geocentric_geodetic_conversion.py
