# Packaging instructions for frosted_tracks.  This uses Poetry
# as its build back-end.

[project]
name = "frosted_tracks"
version = "1.1.0"
description = "Behavioral segmentation and clustering of trajectory data."
license = "BSD-3-Clause"
license-files = ["LICENSE"]

authors = [
    { name = "Andy Wilson", email = "atwilso@sandia.gov " },
    { name = "Keith Dalbey", email = "kdalbey@sandia.gov" },
    { name = "Daniel DeLayo", email = "drdelay@sandia.gov" },
    { name = "Renee Gooding", email = "rlgoodn@sandia.gov" },
    { name = "Jessica Jones", email = "jjones7@sandia.gov" },
    { name = "Kanad Khanna", email = "kkhanna@sandia.gov" },
    { name = "Nitin Sharan", email = "nsharan@sandia.gov" },
    { name = "Jon Whetzel", email = "jhwhetz@sandia.gov " }
]

maintainers = [
    { name = "Andy Wilson", email = "atwilso@sandia.gov "}
]

readme = "README.md"
repository = "https://github.com/sandialabs/frosted_tracks"
keywords = [
    "clustering",
    "ticc",
    "dbscan",
    "trajectories",
    "tracktable"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]

Homepage = "https://github.com/sandialabs/frosted_tracks"
Issues = "https://github.com/sandialabs/frosted_tracks/issues"

[tool.poetry]

packages = [
    { include = "frosted_tracks", from = "src" }
]



[tool.poetry.dependencies]
fast_ticc = ">=1.0.1"
metric_dbscan = ">=1.0.0"
numba = ">=0.53.0"
numpy = ">=1.22"
pandas = ">=2.2.0"
python = ">=3.9"
scikit-learn = ">=1.0.0"
scipy = ">=1.10.0"
tqdm = ">4.60"
tracktable = ">=1.7.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

